--- a/ts/webui/package.json
+++ b/ts/webui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "antd": "^4.15.3",
     "axios": "^0.21.1",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.7.1",
